--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:ssr": "npm run serve:ssr",
     "build": "ng build",
+    "build:prod:ssr": "ng build --prod && ng run personal-portfolio:server:production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run personal-portfolio:serve-ssr",
+    "serve:ssr": "node dist/personal-portfolio/server/main.js",
+    "build:ssr": "ng build && ng run personal-portfolio:server",
+    "prerender": "ng run personal-portfolio:prerender"
   },
   "private": true,
   "dependencies": {
@@ -14,10 +20,15 @@
     "@angular/common": "~12.1.0-",
     "@angular/compiler": "~12.1.0-",
     "@angular/core": "~12.1.0-",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~12.1.0-",
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
+    "@angular/platform-server": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "@nguniversal/express-engine": "^12.1.0",
+    "express": "^4.15.2",
+    "firebase": "^9.8.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -26,6 +37,8 @@
     "@angular-devkit/build-angular": "~12.1.3",
     "@angular/cli": "~12.1.3",
     "@angular/compiler-cli": "~12.1.0-",
+    "@nguniversal/builders": "^12.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
