--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "start:ssr": "npm run serve:ssr",
-    "build": "ng build",
-    "build:prod:ssr": "ng build --prod && ng run personal-portfolio:server:production",
+    "start": "npm run serve:ssr",
+    "build": "ng build --prod && ng run personal-portfolio:server:production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run personal-portfolio:serve-ssr",
